[gd_scene load_steps=6 format=3 uid="uid://2p5gc4iny2yk"]

[ext_resource type="StyleBox" uid="uid://c6dp3mua86yg" path="res://texturas/Narrativo.tres" id="1_fbh3d"]
[ext_resource type="Script" uid="uid://buty28mylv3x1" path="res://script/tarjetamundo.gd" id="1_te7le"]
[ext_resource type="Texture2D" uid="uid://bxn8npei3bmao" path="res://assets/mundo_logica.png" id="2_e2bai"]
[ext_resource type="StyleBox" uid="uid://kpi16nu5t87i" path="res://texturas/SecundariosH.tres" id="3_81mqh"]
[ext_resource type="StyleBox" uid="uid://dqnig6tg5t6nt" path="res://texturas/Secundarios.tres" id="4_ejcxl"]

[node name="TarjetaMundo" type="PanelContainer"]
theme_override_styles/panel = ExtResource("1_fbh3d")
script = ExtResource("1_te7le")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
alignment = 1

[node name="TituloMundo" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.4745098, 0.33333334, 0.28235295, 1)
theme_override_font_sizes/font_size = 24
horizontal_alignment = 1

[node name="FotoMundo" type="TextureRect" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
texture = ExtResource("2_e2bai")
expand_mode = 1
stretch_mode = 6

[node name="Descripcion" type="Label" parent="VBoxContainer"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
theme_override_colors/font_color = Color(0.4745098, 0.33333334, 0.28235295, 1)
text = "¡Cruza el bosque de la lógica y aprende más sobre nuestro amigo Capibara!"
horizontal_alignment = 3
autowrap_mode = 2

[node name="BotonEntrar" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.21568628, 0.25490198, 0.31764707, 1)
theme_override_colors/font_pressed_color = Color(0.16319999, 0.19263999, 0.24, 1)
theme_override_colors/font_hover_color = Color(0.16470589, 0.19215687, 0.23921569, 1)
theme_override_colors/font_hover_pressed_color = Color(0.16470589, 0.19215687, 0.23921569, 1)
theme_override_styles/normal = ExtResource("4_ejcxl")
theme_override_styles/pressed = ExtResource("3_81mqh")
theme_override_styles/hover = ExtResource("3_81mqh")
theme_override_styles/hover_pressed = ExtResource("3_81mqh")
text = "ENTRAR AL MUNDO"
